fixed gutter bar and logo wrap when shrinking screen width in desktop view

--- a/css/index.css
+++ b/css/index.css
@@ -77,12 +77,8 @@ body {
 
 header nav {
 	margin-top: 10px;
-}
-
-.logo {
-	margin-left: 10px;
-	position: relative;
-	top: 8px;
+	display: flex;
+	justify-content: space-between;
 }
 
 @media(max-width: 500px) {
@@ -107,6 +103,31 @@ header nav {
     margin: 0 400px;
     align-self: center;
     margin-bottom: 6%;
+  }
+}
+
+header nav a {
+	color: grey;
+	text-decoration: none;
+	padding: 10px;
+}
+
+@media(max-width: 500px) {
+  header nav a {
+    width: 100%;
+    border-bottom: 2px solid darkgrey;
+    align-self: center;
+    text-align: center;
+		padding: 4%;
+  }
+}
+
+@media(max-width: 800px) {
+  header nav a {
+    order: 1;
+    margin: 0 auto;
+    font-weight: bold;
+    color: darkgrey;
   }
 }
 
@@ -178,34 +199,13 @@ h1 {
   }
 }
 
-header nav a {
-	color: grey;
-	margin-right: 38px;
-	text-decoration: none;
-	padding: 10px;
-}
-
-@media(max-width: 500px) {
-  header nav a {
-    width: 100%;
-    border-bottom: 2px solid darkgrey;
-    align-self: center;
-    text-align: center;
-		padding: 4%;
-  }
-}
-
-@media(max-width: 800px) {
-  header nav a {
-    order: 1;
-    margin: 0 auto;
-    font-weight: bold;
-    color: darkgrey;
-  }
-}
-
 .top-section {
 	display: flex;
+	justify-content: flex-end;
+}
+
+.top-section img {
+	max-width: 379px;
 }
 
 .main-content {
@@ -216,13 +216,10 @@ header nav a {
 }
 
 .middle-img {
-	width: 100%;;
+	width: 100%;
 }
 
 @media(max-width: 500px) {
-  .middle-img {
-    width: 100%;
-  }
   .main-content {
     margin: 0 auto;
     height: 900px;
